@@ -6,6 +6,7 @@
   - add a TemplateEngine based on java.text.MessageFormat
   - allow absence of 'value' on @MaxRows and validate its (lack of) use on SqlObjects
   - fix SqlObject getting confused about result types due to bridge methods
+  - StringTemplate no longer loads templates concurrently to prevent races
 
 3.1.1
   - Improve IBM JDK compatibility with default methods
